--- a/FastFoodManagement.csproj
+++ b/FastFoodManagement.csproj
@@ -33,8 +33,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.dll</HintPath>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
+      <HintPath>packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,30 +55,71 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Ban.cs" />
-    <Compile Include="DanhMuc.cs" />
-    <Compile Include="FastFood.cs" />
-    <Compile Include="HoaDon.cs" />
-    <Compile Include="Login.cs">
+    <Compile Include="BLL\DanhMucBLL.cs" />
+    <Compile Include="BLL\SanPhamBLL.cs" />
+    <Compile Include="DTO\Account.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\Ban.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\BanDTO.cs" />
+    <Compile Include="DTO\CBBItem.cs" />
+    <Compile Include="DTO\DanhMuc.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\DanhMucDTO.cs" />
+    <Compile Include="DTO\HoaDon.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\HoaDonChiTiet.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\HoaDonDTO.cs" />
+    <Compile Include="DTO\NhanVienDTO.cs" />
+    <Compile Include="DTO\QLSP.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLSP.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\QLSP.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\QLSP.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>QLSP.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\SanPham.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="DTO\SanPhamDTO.cs" />
+    <Compile Include="DTO\Voucher.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VIEW\Login.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Login.Designer.cs">
+    <Compile Include="VIEW\Login.Designer.cs">
       <DependentUpon>Login.cs</DependentUpon>
     </Compile>
-    <Compile Include="NhanVien.cs" />
-    <Compile Include="Order.cs">
+    <Compile Include="DTO\NhanVien.cs">
+      <DependentUpon>QLSP.tt</DependentUpon>
+    </Compile>
+    <Compile Include="VIEW\Order.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Order.Designer.cs">
+    <Compile Include="VIEW\Order.Designer.cs">
       <DependentUpon>Order.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="QuanLy.cs" />
-    <EmbeddedResource Include="Login.resx">
+    <EmbeddedResource Include="VIEW\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Order.resx">
+    <EmbeddedResource Include="VIEW\Order.resx">
       <DependentUpon>Order.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
@@ -81,6 +131,14 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EntityDeploy Include="DTO\QLSP.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>QLSP.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <None Include="DTO\QLSP.edmx.diagram">
+      <DependentUpon>QLSP.edmx</DependentUpon>
+    </None>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -93,6 +151,22 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="DTO\QLSP.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>QLSP.Context.cs</LastGenOutput>
+      <DependentUpon>QLSP.edmx</DependentUpon>
+    </Content>
+    <Content Include="DTO\QLSP.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>QLSP.edmx</DependentUpon>
+      <LastGenOutput>QLSP.cs</LastGenOutput>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
