add Change Password

--- a/FastFoodManagement.csproj
+++ b/FastFoodManagement.csproj
@@ -101,6 +101,12 @@
     <Compile Include="DTO\Voucher.cs">
       <DependentUpon>QLSP.tt</DependentUpon>
     </Compile>
+    <Compile Include="VIEW\ChangePassword.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VIEW\ChangePassword.Designer.cs">
+      <DependentUpon>ChangePassword.cs</DependentUpon>
+    </Compile>
     <Compile Include="VIEW\Login.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -118,6 +124,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="VIEW\ChangePassword.resx">
+      <DependentUpon>ChangePassword.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VIEW\Login.resx">
       <DependentUpon>Login.cs</DependentUpon>
     </EmbeddedResource>
