--- a/FastFoodManagement.csproj
+++ b/FastFoodManagement.csproj
@@ -105,8 +105,11 @@
       <DependentUpon>QLSP.tt</DependentUpon>
     </Compile>
     <Compile Include="DTO\SanPhamDTO.cs" />
-    <Compile Include="DTO\Voucher.cs">
-      <DependentUpon>QLSP.tt</DependentUpon>
+    <Compile Include="VIEW\Bill.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VIEW\Bill.Designer.cs">
+      <DependentUpon>Bill.cs</DependentUpon>
     </Compile>
     <Compile Include="VIEW\ChangePassword.cs">
       <SubType>Form</SubType>
@@ -131,6 +134,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="VIEW\Bill.resx">
+      <DependentUpon>Bill.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="VIEW\ChangePassword.resx">
       <DependentUpon>ChangePassword.cs</DependentUpon>
     </EmbeddedResource>
